--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -56,10 +56,11 @@
   issn = {2045-2322},
   doi = {10.1038/s41598-020-80184-6},
   urldate = {2024-01-31},
-  abstract = {There is a global concern about the effects of climate change driven shifts in species phenology on crop pests. Using geographically and temporally extensive data set of moth trap catches and temperatures across the cotton growing states of India, we predicted the phenology of cotton pink bollworm Pectinophora gossypiella (Saunders). Our approach was centered on growing degree days (GDD), a measure of thermal accumulation that provides a mechanistic link between climate change and species' phenology. The phenology change was predicted by calculating absolute error associated with DD and ordinal date, an alternative predictor of phenology, for peak moth abundance. Our results show that GDD outperformed the ordinal dates in predicting peak moth abundance in 6 out of 10 selected locations. Using established thresholds of 13.0/34.0~{\textdegree}C, mean DD accumulated between the consecutive moth peaks across different years were estimated at 504.05\,{$\pm$}\,4.84. Seven generations were determined for pink bollworm in a cropping season, the length of which varied between 35 and 73~days in response to temperature. Pink bollworm population reached its peak during third generation which can be the target for management actions. The study provides essential information for developing pink bollworm management strategies under climate change.},
+  abstract = {There is a global concern about the effects of climate change driven shifts in species phenology on crop pests. Using geographically and temporally extensive data set of moth trap catches and temperatures across the cotton growing states of India, we predicted the phenology of cotton pink bollworm Pectinophora gossypiella (Saunders). Our approach was centered on growing degree days (GDD), a measure of thermal accumulation that provides a mechanistic link between climate change and species' phenology. The phenology change was predicted by calculating absolute error associated with DD and ordinal date, an alternative predictor of phenology, for peak moth abundance. Our results show that GDD outperformed the ordinal dates in predicting peak moth abundance in 6 out of 10 selected locations. Using established thresholds of 13.0/34.0~{$^\circ$}C, mean DD accumulated between the consecutive moth peaks across different years were estimated at 504.05\,{$\pm$}\,4.84. Seven generations were determined for pink bollworm in a cropping season, the length of which varied between 35 and 73~days in response to temperature. Pink bollworm population reached its peak during third generation which can be the target for management actions. The study provides essential information for developing pink bollworm management strategies under climate change.},
   copyright = {2021 The Author(s)},
   langid = {english},
-  keywords = {Agroecology,Animal behaviour,Behavioural ecology,Climate-change ecology,Ecological modelling,Ecology,Entomology,Population dynamics}
+  keywords = {Agroecology,Animal behaviour,Behavioural ecology,Climate-change ecology,Ecological modelling,Ecology,Entomology,Population dynamics},
+  file = {/Users/293003c/Zotero/storage/ZG9Z9GWZ/Fand et al. - 2021 - Degree day-based model predicts pink bollworm phen.pdf}
 }
 
 @article{fujiwara2017,
@@ -106,6 +107,24 @@
   file = {/Users/293003c/Zotero/storage/B4DH56PX/Gadd - 1947 - Observations on the Life Cycle of Xyleborus Fornic.pdf;/Users/293003c/Zotero/storage/I7CT57FU/j.1744-7348.1947.tb06355.html}
 }
 
+@article{jongejans2015,
+  title = {A Unifying Gravity Framework for Dispersal},
+  author = {Jongejans, Eelke and Skarpaas, Olav and Ferrari, Matthew J. and Long, Eric S. and Dauer, Joseph T. and Schwarz, Carrie M. and Rauschert, Emily S. J. and Jabbour, Randa and Mortensen, David A. and Isard, Scott A. and Lieb, David A. and Sezen, Zeynep and Hulting, Andrew G. and Shea, Katriona},
+  year = {2015},
+  month = may,
+  journal = {Theoretical Ecology},
+  volume = {8},
+  number = {2},
+  pages = {207--223},
+  issn = {1874-1746},
+  doi = {10.1007/s12080-014-0245-5},
+  urldate = {2024-02-09},
+  abstract = {Most organisms disperse at some life-history stage, but different research traditions to study dispersal have evolved in botany, zoology, and epidemiology. In this paper, we synthesize concepts, principles, patterns, and processes in dispersal across organisms. We suggest a consistent conceptual framework for dispersal, which utilizes generalized gravity models. This framework will facilitate communication among research traditions, guide the development of dispersal models for theoretical and applied ecology, and enable common representation across taxonomic groups, encapsulating processes at the source and destination of movement, as well as during the intervening relocation process, while allowing each of these stages in the dispersal process to be addressed separately and in relevant detail. For different research traditions, certain parts of the dispersal process are less studied than others (e.g., seed release processes in plants and termination of dispersal in terrestrial and aquatic animals). The generalized gravity model can serve as a unifying framework for such processes, because it captures the general conceptual and formal components of any dispersal process, no matter what the relevant biological timescale involved. We illustrate the use of the framework with examples of passive (a plant), active (an animal), and vectored (a fungus) dispersal, and point out promising applications, including studies of dispersal mechanisms, total dispersal kernels, and spatial population dynamics.},
+  langid = {english},
+  keywords = {Conceptual framework,Dispersal patterns and processes,Empirical and mechanistic models,Migration,Movement,Serial and parallel processes},
+  file = {/Users/293003c/Zotero/storage/UC6SJFV2/Jongejans et al. - 2015 - A unifying gravity framework for dispersal.pdf}
+}
+
 @article{rosenbaum2019,
   title = {Estimating {{Parameters From Multiple Time Series}} of {{Population Dynamics Using Bayesian Inference}}},
   author = {Rosenbaum, Benjamin and Raatz, Michael and Weithoff, Guntram and Fussmann, Gregor F. and Gaedke, Ursula},
@@ -148,8 +167,8 @@
   issn = {1461-9563},
   doi = {10.1111/afe.12297},
   urldate = {2024-01-30},
-  abstract = {Temperature heavily affects the development rate of insects. Until temperatures become too extreme, insects will generally experience greater rates of development at higher temperatures and slower rates of development at lower temperatures. The invasive ambrosia beetle Euwallacea nr. fornicatus Eichhoff, referred to as the polyphagous shot hole borer (PSHB), was tested for development rates at a range of temperatures between 15 and 32 {\textdegree}C. Based on the development rates recorded, it was calculated that the tmin, tmax and topt were 13.34, 33.08 and 27.51 {\textdegree}C, respectively. The number of degree days required for PSHB to complete development from egg to adult was estimated to be approximately 398 degree days. These results can be used to predict the potential distribution of PSHB, as well as where climatic factors may limit their establishment. Furthermore, the development information can be of use when predicting an increase in beetle activity.},
-  copyright = {{\textcopyright} 2018 The Royal Entomological Society},
+  abstract = {Temperature heavily affects the development rate of insects. Until temperatures become too extreme, insects will generally experience greater rates of development at higher temperatures and slower rates of development at lower temperatures. The invasive ambrosia beetle Euwallacea nr. fornicatus Eichhoff, referred to as the polyphagous shot hole borer (PSHB), was tested for development rates at a range of temperatures between 15 and 32 {$^\circ$}C. Based on the development rates recorded, it was calculated that the tmin, tmax and topt were 13.34, 33.08 and 27.51 {$^\circ$}C, respectively. The number of degree days required for PSHB to complete development from egg to adult was estimated to be approximately 398 degree days. These results can be used to predict the potential distribution of PSHB, as well as where climatic factors may limit their establishment. Furthermore, the development information can be of use when predicting an increase in beetle activity.},
+  copyright = {{\copyright} 2018 The Royal Entomological Society},
   langid = {english},
   keywords = {Ambrosia beetle,artificial rearing,degree days,insect development,polyphagous shot hole borer,temperature},
   file = {/Users/293003c/Zotero/storage/YQGZTPG8/Umeda and Paine - 2019 - Temperature can limit the invasion range of the am.pdf;/Users/293003c/Zotero/storage/LEDBWZ7E/afe.html}
@@ -167,7 +186,7 @@
   issn = {1744-7917},
   doi = {10.1111/j.1744-7917.2007.00156.x},
   urldate = {2023-11-20},
-  abstract = {The effect of temperature on the rate of development of Xyleborus fornicatus (Eichh.) was determined by rearing individuals under a range of constant temperatures (15{\textendash}32{\textdegree}C). Rates of development changed in a linear fashion over a wide range of temperatures. Estimates of lower development thresholds were obtained for eggs (15.7{$\pm$}0.5{\textdegree}C), larvae (15.8{$\pm$}0.8{\textdegree}C) and pupae (14.3{$\pm$}1.4{\textdegree}C) and the degree days (DD) for development were 70{$\pm$}4.4, 95{$\pm$}8.5 and 72{$\pm$}5.1 DD, respectively. Optimum temperature for development was around 30{\textdegree}C for all stages. Temperature fluctuation in cooler High Country areas (above 1400 m) with a mean temperature around 15{\textdegree}C seems to be critical for the development of the pest, which may be responsible for the near absence of pest in those areas. Temperature fluctuations (18{\textendash}30{\textdegree}C) in the Mid Country region (600{\textendash}1200 m) favor the development of the pest compared to development under constant conditions. The altitudinal distribution of the shot-hole borer across tea growing areas in Sri Lanka is, therefore, mainly governed by temperature.},
+  abstract = {The effect of temperature on the rate of development of Xyleborus fornicatus (Eichh.) was determined by rearing individuals under a range of constant temperatures (15{\textendash}32{$^\circ$}C). Rates of development changed in a linear fashion over a wide range of temperatures. Estimates of lower development thresholds were obtained for eggs (15.7{$\pm$}0.5{$^\circ$}C), larvae (15.8{$\pm$}0.8{$^\circ$}C) and pupae (14.3{$\pm$}1.4{$^\circ$}C) and the degree days (DD) for development were 70{$\pm$}4.4, 95{$\pm$}8.5 and 72{$\pm$}5.1 DD, respectively. Optimum temperature for development was around 30{$^\circ$}C for all stages. Temperature fluctuation in cooler High Country areas (above 1400 m) with a mean temperature around 15{$^\circ$}C seems to be critical for the development of the pest, which may be responsible for the near absence of pest in those areas. Temperature fluctuations (18{\textendash}30{$^\circ$}C) in the Mid Country region (600{\textendash}1200 m) favor the development of the pest compared to development under constant conditions. The altitudinal distribution of the shot-hole borer across tea growing areas in Sri Lanka is, therefore, mainly governed by temperature.},
   langid = {english},
   keywords = {damage levels,degree-days,developmental thresholds,tea growing regions},
   file = {/Users/293003c/Zotero/storage/9PN5M56G/Walgama and Zalucki - 2007 - Temperature-dependent development of Xyleborus for.pdf;/Users/293003c/Zotero/storage/2NB37H7I/j.1744-7917.2007.00156.html}
