Add details of data and assumptions behind the priors

--- a/ms/PSHBRefs.bib
+++ b/ms/PSHBRefs.bib
@@ -7,7 +7,7 @@
   volume = {19},
   number = {1},
   pages = {e0291393},
-  publisher = {{Public Library of Science}},
+  publisher = {Public Library of Science},
   issn = {1932-6203},
   doi = {10.1371/journal.pone.0291393},
   urldate = {2024-02-01},
@@ -27,7 +27,7 @@
   eprint = {2402197},
   eprinttype = {jstor},
   pages = {431--438},
-  publisher = {{[British Ecological Society, Wiley]}},
+  publisher = {[British Ecological Society, Wiley]},
   issn = {0021-8901},
   doi = {10.2307/2402197},
   urldate = {2024-01-30},
@@ -65,7 +65,7 @@
   volume = {11},
   number = {1},
   pages = {436},
-  publisher = {{Nature Publishing Group}},
+  publisher = {Nature Publishing Group},
   issn = {2045-2322},
   doi = {10.1038/s41598-020-80184-6},
   urldate = {2024-01-31},
@@ -146,7 +146,7 @@
   journal = {Frontiers in Ecology and Evolution},
   volume = {6},
   pages = {423675},
-  publisher = {{Frontiers}},
+  publisher = {Frontiers},
   issn = {2296-701X},
   doi = {10.3389/fevo.2018.00234},
   urldate = {2023-11-20},
